# PackLab

./: .coveragerc  .gitignore  CMakeLists.txt  README.md  README.rst  data.json  endpoint.json  index.html  meta.yaml  notebook.ipynb  pyproject.toml  version_switcher.json
.github/workflows/: deploy_anaconda.yml  deploy_documentation.yml
PackLab/: __init__.py  _version.py  directories.py  domain_info.py  results.py  simulator.py  statistics.py  units.py  utils.py
PackLab/analytical/: __init__.py  distributions.py  domain.py  samplers.py  solver.py
PackLab/cpp/domain/: CMakeLists.txt  domain.cpp  domain.h  interface.cpp
PackLab/cpp/pint/: CMakeLists.txt  pint.cpp  pint.h
PackLab/monte_carlo/: __init__.py  estimator.py  results.py  simulator.py
development/: benchmark.py  mono_disperse.py  poly_disperse.py  test.py
docs/examples/: analytical_poly_disperse.py  monte_carlo_estimator_vs_analytical.py  monte_carlo_mono_disperse.py  monte_carlo_poly_disperse.py  monte_carlo_vs_analytical.py  poly_disperse.py  workflow.py
docs/latest/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/source/: code.rst  conf.py  sg_execution_times.rst
docs/v0.0.0/: .buildinfo  code.html  genindex.html  index.html
docs/v0.0.1/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.10/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.11/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.13/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.14/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.15/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.2/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.3/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.5/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.6/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.7/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a8b65143a8da5de5_estimator_py.html  z_a8b65143a8da5de5_results_py.html  z_a8b65143a8da5de5_utils_py.html  z_e2d9d8b186d5cbfc_analytical_py.html  z_e2d9d8b186d5cbfc_domain_info_py.html  z_e2d9d8b186d5cbfc_results_py.html  z_e2d9d8b186d5cbfc_simulator_py.html  z_e2d9d8b186d5cbfc_statistics_py.html  z_e2d9d8b186d5cbfc_utils_py.html  z_f26d9a488f7ca80b_distributions_py.html  z_f26d9a488f7ca80b_domain_py.html  z_f26d9a488f7ca80b_samplers_py.html  z_f26d9a488f7ca80b_solver_py.html
tests/: test_0.py  test_monte_carlo.py
(+310 files in other folders)
